<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="file_name">File Name</string>
    <string name="status">Status</string>




    <string name="glide_radio">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_radio">LoadApp - current repository by Udacity</string>
    <string name="retrofit_radio">Retrofit -Type-safe HTTP client for Android and Java by Square,Inc</string>
    <string name="image_for_main_activity">Image For Main Activity</string>
    <string name="demo_text">This is File Name When User choose Radio button</string>
    <string name="ok_button">OK</string>
</resources>
